# AgenticWorkshopFeb26

./: .env.example  .gitignore  Dockerfile  Dockerfile.mock  README.md  docker-compose.yml  pyproject.toml  requirements.txt
AIFoundryVoiceAgent/: .env.example  README.md  main.py  requirements.txt
diagrams/: agent-decision-flow.mermaid  call-sequence.mermaid  system-overview.mermaid
docs/: agent-service.md  architecture.md  setup-guide.md  troubleshooting.md  voice-live-api.md
examples/01_voice_live_basic/: README.md  main.py
examples/02_agent_with_tools/: README.md  main.py
examples/03_voice_agent_integration/: README.md  main.py
examples/04_customer_service_demo/: README.md  main.py
examples/05_agent_framework_local/: README.md  main.py
mvoicefinal/: .env.example  README.md  kundendaten.json  main.py  main_agent.py  pyproject.toml
mvoicefinal/src/: __init__.py  audio_processor.py  basic_voice_assistant.py  mock_orders_api.py  order_agent.py  order_backend.py  pending_task_manager.py  query_classifier.py  set_logging.py  voice_agent_bridge.py  voice_service.py
mvoicefinal/voice/: ___All_Errors.txt
mvoicefinal/voice/voice/: main.py
mvoicefinal/voice/voice/src/: audio_processor.py  basic_voice_assistant.py  query_classifier.py  set_logging.py  voice_agent_bridge.py  voice_service.py
src/prompts/: system_prompt.md
src/tools/: __init__.py  base_tool.py  calendar_tool.py  crm_tool.py  order_tool.py  ticket_tool.py
tests/: test_config.py  test_session_manager.py  test_tools.py
voiceAgentAgentic/: .env.example  README.md  requirements.txt
(+12 files in other folders)
